# agent-framework-workshop

./: .env.example  README.md  Single-Agent.ipynb  convert_notebook.py  pyproject.toml
.devcontainer/: devcontainer.json
01-single-agents/: 01.1-single-agents.ipynb  01.2-single-agent-mcp.ipynb
02-workflows/: 02.1-intro-workflows.ipynb  02.2-orchestrations.ipynb
03-rag/: 03.0-setup-guide.ipynb  03.0-setup-guide.md  03.1-rag-agent.ipynb
03-rag-agent/: rag_agent.ipynb  setup-guide.ipynb
04-human-in-the-loop/: 04.1-hitl-intro.ipynb
mcp/: contoso.db  mcp_server.py
use-cases/: intro.md
use-cases/1-rag-agent/: 1.2-rag-agent.ipynb
