[project]
name = "agent-framework-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251016",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.10",
    "python-dotenv>=1.1.1",
    "agent-framework[devui]",
    "fastmcp>=2.2.0",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0" 
]
